Completed input styling fix for when on mobile device the inputs are not adjusted

--- a/client/src/components/app.scss
+++ b/client/src/components/app.scss
@@ -776,3 +776,7 @@ input[type=search]::-webkit-search-cancel-button {
   background-color: transparent;
   border-bottom: 1px solid #26a69a;
 }
+
+input[type=search] {
+  -webkit-appearance: none;
+}
